--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -22,42 +22,42 @@
           // "target": "riscv32imc-esp-espidf",
           // "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          "target": "x86_64-unknown-linux-gnu",
-          "features": [
-            // "executor"
-            // "single-thread",
-            // "env_vars"
-            // "logging"
-            // "cmp_auth"
-            // "cmp_filesystem",
-            // "cmp_http_client"
-            // "cmp_http_server"
-            // "cmp_filesystem",
-            // "cmp_influxdb"
-            // "cmp_modbus_client"
-            // "cmp_mqtt_client"
-            // "cmp_plc"
-            // "cmp_redis_client"
-            // "cmp_slint"
-            "cmp_surrealdb"
-            // "cmp_system_info"
-            // "cmp_telegram"
-            // "cmp_timescaledb"
-            // "cmp_websocket_client"
-            // "cmp_websocket_server"
-          ]
-          // ---- wasm32-unknown-unknown -----------------------------------------------------------
-          // "target": "wasm32-unknown-unknown",
+          // "target": "x86_64-unknown-linux-gnu",
           // "features": [
-          // "single-thread", // Активировать обязательно !
-          // "executor",
-          //   "logging",
-          // "cmp_http_client_wasm",
-          // "cmp_leptos",
+          // "executor"
+          // "single-thread",
+          // "env_vars"
+          // "logging"
+          // "cmp_auth"
+          // "cmp_filesystem",
+          // "cmp_http_client"
+          // "cmp_http_server"
+          // "cmp_filesystem",
+          // "cmp_influxdb"
+          // "cmp_modbus_client"
+          // "cmp_mqtt_client"
           // "cmp_plc"
-          //   "cmp_websocket_client_wasm",
-          //   "cmp_webstorage"
+          // "cmp_redis_client"
+          // "cmp_slint"
+          // "cmp_surrealdb"
+          // "cmp_system_info"
+          // "cmp_telegram"
+          // "cmp_timescaledb"
+          // "cmp_websocket_client"
+          // "cmp_websocket_server"
           // ]
+          // ---- wasm32-unknown-unknown -----------------------------------------------------------
+          "target": "wasm32-unknown-unknown",
+          "features": [
+            "single-thread", // Активировать обязательно !
+            // "executor",
+            //   "logging",
+            // "cmp_http_client_wasm",
+            // "cmp_leptos",
+            // "cmp_plc"
+            //   "cmp_websocket_client_wasm",
+            "cmp_webstorage"
+          ]
         }
       }
     }
