--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ uuid = { version = "1.7.0", features = ["macro-diagnostics", "serde", "v4"] }
 async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
+console_error_panic_hook = { version = " 0.1.7", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
@@ -193,7 +194,14 @@ cmp_influxdb = ["executor", "dep:openssl", "dep:reqwest"]
 cmp_filesystem = ["executor", "tokio?/fs"]
 
 ## Компонент для создания интерфейсов на базе Leptos
-cmp_leptos = ["executor", "dep:leptos", "dep:palette", "dep:url", "dep:web-sys"]
+cmp_leptos = [
+    "executor",
+    "dep:console_error_panic_hook",
+    "dep:leptos",
+    "dep:palette",
+    "dep:url",
+    "dep:web-sys",
+]
 
 ## Компонент Modbus клиент
 cmp_modbus_client = ["executor", "dep:tokio-modbus"]
