--- a/Cargo.toml
+++ b/Cargo.toml
@@ -299,6 +299,10 @@ name = "cmp_esp_i2c_master_ds3231"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_ds3231.rs"
 
 [[example]]
+name = "cmp_esp_i2c_master_general"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_general.rs"
+
+[[example]]
 name = "cmp_esp_i2c_master_pca9555"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_pca9555.rs"
 
