--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,10 @@ hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.6.12", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.12", features = ["csr"], optional = true }
 log = { version = "0.4.21", optional = true }
-postcard = { version = "1.0.8", features = ["use-std"], optional = true }
+postcard = { version = "1.0.8", features = [
+    "use-std",
+    "use-crc",
+], optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
