--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = " 0.1.7", optional = true }
+crc = { version = "3.2.1", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
@@ -169,6 +170,7 @@ cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
 cmp_esp = [
     "executor",
     "single-thread",
+    "dep:crc",
     "dep:embedded-svc",
     "dep:heapless",
     "dep:postcard",
