--- a/target_config.json
+++ b/target_config.json
@@ -13,6 +13,7 @@
         "cmp_influxdb",
         "cmp_modbus_client",
         "cmp_mqtt_client",
+        "cmp_os_process",
         "cmp_plc",
         "cmp_redis_client",
         "cmp_slint",
@@ -50,6 +51,7 @@
         "cmp_influxdb",
         "cmp_modbus_client",
         "cmp_mqtt_client",
+        "cmp_os_process",
         "cmp_plc",
         "cmp_raspberrypi",
         "cmp_redis_client",
