--- a/target_config.json
+++ b/target_config.json
@@ -67,7 +67,7 @@
     },
     {
       "name": "riscv32imc-esp-espidf",
-      "toolchain": "+nightly-2024-02-01-x86_64-unknown-linux-gnu",
+      "toolchain": "+nightly",
       "features": ["cmp_esp", "cmp_plc", "executor"],
       "add_feat": ["single-thread"]
     },
@@ -87,3 +87,4 @@
     }
   ]
 }
+// "toolchain": "+nightly-2024-02-01-x86_64-unknown-linux-gnu",
