--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = " 0.1.7", optional = true }
 crc = { version = "3.2.1", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
+embedded-graphics = { version = "0.8.1", optional = true }
 embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
 heapless = { version = "0.8.0", optional = true }
@@ -60,6 +61,7 @@ sqlx = { version = "0.7.3", features = [
     "postgres",
     "runtime-tokio",
 ], optional = true }
+ssd1306 = { version = "0.9.0", optional = true }
 surrealdb = { version = "1.5.4", optional = true }
 sysinfo = { version = "0.30.7", optional = true }
 teloxide = { version = "0.12.2", optional = true, features = ["macros"] }
@@ -171,9 +173,11 @@ cmp_esp = [
     "executor",
     "single-thread",
     "dep:crc",
+    "dep:embedded-graphics",
     "dep:embedded-svc",
     "dep:heapless",
     "dep:postcard",
+    "dep:ssd1306",
     "tokio?/time",
 ]
 
