--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.6.12", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.12", features = ["csr"], optional = true }
 log = { version = "0.4.21", optional = true }
+pm_firmware = {version = "*", path = "../plc-modules/firmware", optional = true}
 postcard = { version = "1.0.8", features = [
     "use-std",
     "use-crc",
@@ -178,6 +179,7 @@ cmp_esp = [
     "dep:heapless",
     "dep:postcard",
     "dep:ssd1306",
+    "dep:pm_firmware",
     "tokio?/time",
 ]
 
@@ -316,6 +318,10 @@ path = "./examples/cmp_esp/cmp_esp_i2c_master_pca9555.rs"
 [[example]]
 name = "cmp_esp_i2c_master_pcf8575"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_pcf8575.rs"
+
+[[example]]
+name = "cmp_esp_i2c_master_pm_rq8"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_pm_rq8.rs"
 
 [[example]]
 name = "cmp_esp_i2c_master_ssd1306"
