--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.6.12", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.12", features = ["csr"], optional = true }
 log = { version = "0.4.21", optional = true }
-pm_firmware = {version = "*", path = "../plc-modules/firmware", optional = true}
+pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
 postcard = { version = "1.0.8", features = [
     "use-std",
     "use-crc",
@@ -179,7 +179,7 @@ cmp_esp = [
     "dep:heapless",
     "dep:postcard",
     "dep:ssd1306",
-    "dep:pm_firmware",
+    "dep:pm_firmware_lib",
     "tokio?/time",
 ]
 
@@ -227,7 +227,13 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor", "dep:instant"]
 
 ## Работа с периферией Raspberry Pi
-cmp_raspberrypi = ["executor", "dep:crc", "dep:rppal", "dep:postcard"]
+cmp_raspberrypi = [
+    "executor",
+    "dep:crc",
+    "dep:rppal",
+    "dep:pm_firmware_lib",
+    "dep:postcard",
+]
 
 ## Компонент клиента Redis
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
@@ -354,6 +360,10 @@ path = "./examples/cmp_raspberrypi/cmp_raspberry_i2c_master_bmp180.rs"
 [[example]]
 name = "cmp_raspberry_i2c_master_pcf8575"
 path = "./examples/cmp_raspberrypi/cmp_raspberry_i2c_master_pcf8575.rs"
+
+[[example]]
+name = "cmp_raspberry_i2c_master_pm_rq8"
+path = "./examples/cmp_raspberrypi/cmp_raspberry_i2c_master_pm_rq8.rs"
 
 [[example]]
 name = "cmp_http_server"
