--- a/Cargo.toml
+++ b/Cargo.toml
@@ -327,6 +327,10 @@ name = "cmp_esp_i2c_master_pcf8575"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_pcf8575.rs"
 
 [[example]]
+name = "cmp_esp_i2c_master_pm_di16"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_pm_di16.rs"
+
+[[example]]
 name = "cmp_esp_i2c_master_pm_rq8"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_pm_rq8.rs"
 
