--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -19,8 +19,8 @@
           // "cmp_telegram"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          // "target": "riscv32imc-esp-espidf",
-          // "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
+          "target": "riscv32imc-esp-espidf",
+          "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
           // "target": "x86_64-unknown-linux-gnu",
           // "features": [
@@ -48,17 +48,17 @@
           // "cmp_websocket_server"
           // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
-          "target": "wasm32-unknown-unknown",
-          "features": [
-            "single-thread", // Активировать обязательно !
-            //   "executor",
-            //   "logging",
-            //   "cmp_http_client_wasm",
-            "cmp_leptos",
-            "cmp_plc",
-            "cmp_websocket_client_wasm"
-            //   "cmp_webstorage"
-          ]
+          // "target": "wasm32-unknown-unknown",
+          // "features": [
+          // "single-thread", // Активировать обязательно !
+          //   "executor",
+          //   "logging",
+          //   "cmp_http_client_wasm",
+          // "cmp_leptos",
+          // "cmp_plc",
+          // "cmp_websocket_client_wasm"
+          //   "cmp_webstorage"
+          // ]
         }
       }
     }
