--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -14,6 +14,7 @@
           // ---- aarch64-unknown-linux-gnu --------------------------------------------------------
           "target": "aarch64-unknown-linux-gnu",
           "features": [
+            "cmp_plc",
             "cmp_raspberrypi"
             // "cmp_slint"
             // "cmp_telegram"
