--- a/test_slint/Cargo.toml
+++ b/test_slint/Cargo.toml
@@ -7,17 +7,21 @@ build = "build.rs"
 
 [dependencies]
 futures = "*"
-rsiot = { path = "../", features = ["cmp_slint", "cmp_system_info"] }
+rsiot = { path = "../", features = [
+    "cmp_raspberrypi",
+    "cmp_slint",
+    "cmp_system_info",
+] }
 serde = { version = "*", features = ["derive"] }
 tokio = { version = "*", features = ["rt-multi-thread", "macros", "time"] }
 tracing = "*"
 tracing-subscriber = "*"
 
-# slint = "*"
 slint = { version = "*", features = [
     "backend-linuxkms-noseat",
     "renderer-skia",
 ] }
 
 [build-dependencies]
-slint-build = "1.7.1"
+slint-build = "*"
+# slint-build = "1.7.1"
