add resettable type for plc

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -20,34 +20,35 @@
           // "cmp_telegram"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          "target": "riscv32imc-esp-espidf",
-          "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
+          // "target": "riscv32imc-esp-espidf",
+          // "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          // "target": "x86_64-unknown-linux-gnu",
-          // "features": [
-          // "executor"
-          // "single-thread",
-          // "env_vars"
-          // "logging"
-          // "cmp_auth",
-          // "cmp_filesystem"
-          // "cmp_http_client"
-          // "cmp_http_server"
-          // "cmp_filesystem",
-          // "cmp_influxdb",
-          // "cmp_modbus_client"
-          // "cmp_mqtt_client"
-          // "cmp_plc",
-          // "cmp_redis_client"
-          // "cmp_os_process"
-          // "cmp_slint"
-          // "cmp_surrealdb"
-          // "cmp_system_info"
-          // "cmp_telegram"
-          // "cmp_timescaledb"
-          // "cmp_websocket_client"
-          // "cmp_websocket_server"
-          // ]
+          "target": "x86_64-unknown-linux-gnu",
+          "features": [
+            "rustdoc",
+            // "executor"
+            // "single-thread",
+            // "env_vars"
+            // "logging"
+            // "cmp_auth",
+            // "cmp_filesystem"
+            // "cmp_http_client"
+            // "cmp_http_server"
+            // "cmp_filesystem",
+            // "cmp_influxdb",
+            // "cmp_modbus_client"
+            // "cmp_mqtt_client"
+            "cmp_plc"
+            // "cmp_redis_client"
+            // "cmp_os_process"
+            // "cmp_slint"
+            // "cmp_surrealdb"
+            // "cmp_system_info"
+            // "cmp_telegram"
+            // "cmp_timescaledb"
+            // "cmp_websocket_client"
+            // "cmp_websocket_server"
+          ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
