--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ instant = { version = "0.1.12", features = ["wasm-bindgen"], optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.6.12", features = ["csr"], optional = true }
-leptos_router = { version = "0.6.12", features = ["csr"], optional = true }
+leptos = { version = "0.7.0-rc1", features = ["csr"], optional = true }
+leptos_router = { version = "0.7.0-rc1", optional = true }
 log = { version = "0.4.21", optional = true }
 pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
 postcard = { version = "1.0.8", features = [
@@ -87,8 +87,11 @@ tower-http = { version = "0.5.1", features = [
     "trace",
 ], optional = true }
 url = { version = "2.5.0", optional = true }
+wasm-bindgen = { version = "*", optional = true }
 web-sys = { version = "0.3.68", features = [
     "Location",
+    "Node",
+    "NodeList",
     "Window",
 ], optional = true }
 ws2812-esp32-rmt-driver = { version = "*", features = [
@@ -216,6 +219,7 @@ cmp_leptos = [
     "dep:leptos",
     "dep:palette",
     "dep:url",
+    "dep:wasm-bindgen",
     "dep:web-sys",
 ]
 
