--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -22,7 +22,7 @@ MCU = "esp32c3"
 # install all libraries globally, in folder ~/.espressif
 ESP_IDF_TOOLS_INSTALL_DIR = "global"
 # check current version on https://docs.espressif.com/projects/esp-idf/en/latest/esp32/index.html
-ESP_IDF_VERSION = "v5.2.2"
+ESP_IDF_VERSION = "v5.3.1"
 
 ANDROID_HOME = "/home/konstantin/Android/Sdk"
 JAVA_HOME = "/snap/android-studio/current/jbr/"
@@ -30,3 +30,7 @@ CC_aarch64-linux-android = "/home/konstantin/Android/Sdk/ndk/26.2.11394342/toolc
 CCX_aarch64-linux-android = "/home/konstantin/Android/Sdk/ndk/26.2.11394342/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang"
 AR_aarch64-linux-android = "/home/konstantin/Android/Sdk/ndk/26.2.11394342/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
 RANLIB_aarch64-linux-android = "/home/konstantin/Android/Sdk/ndk/26.2.11394342/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"
+
+# Workaround for https://github.com/esp-rs/esp-idf-template/issues/174
+# TODO
+CRATE_CC_NO_DEFAULTS = "1"
