--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,13 @@ bincode = { version = "1.3.3" }
 bitvec = { version = "1.0.1" }
 byteorder = { version = "1.5.0" }
 chrono = { version = "0.4.35", features = ["serde"] }
+crc = { version = "3.2.1" }
 document-features = { version = "0.2.8" }
 getrandom = { version = "0.2", features = ["js"] }
+postcard = { version = "1.0.8", features = ["use-std", "use-crc"] }
 serde = { version = "1.0.197", features = ["derive"] }
 strum = { version = "0.26.3", features = ["derive"] }
-thiserror = { version = "1.0.57" }
+thiserror = { version = "2.0.3" }
 tracing = { version = "0.1.40", features = ["log"] }
 uuid = { version = "1.7.0", features = ["macro-diagnostics", "serde", "v4"] }
 
@@ -29,7 +31,6 @@ async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = " 0.1.7", optional = true }
-crc = { version = "3.2.1", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-graphics = { version = "0.8.1", optional = true }
 embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
@@ -44,16 +45,13 @@ leptos = { version = "0.7.0-rc1", features = ["csr"], optional = true }
 leptos_router = { version = "0.7.0-rc1", optional = true }
 log = { version = "0.4.21", optional = true }
 pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
-postcard = { version = "1.0.8", features = [
-    "use-std",
-    "use-crc",
-], optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
 rppal = { version = "0.17.1", optional = true }
 palette = { version = "0.7.4", features = ["named"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
+serialport = { version = "4.6.0", optional = true, default-features = false }
 sha2 = { version = "0.10.8", optional = true }
 slint = { version = "1.4.1", optional = true }
 sqlx = { version = "0.7.3", features = [
@@ -145,6 +143,8 @@ tokio = { version = "^1.36.0", features = [
 embuild = { version = "0.31.3", features = ["espidf"] }
 cfg_aliases = "0.2.0"
 
+# TODO - delete
+cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
 
 [features]
 
@@ -179,11 +179,9 @@ cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
 cmp_esp = [
     "executor",
     "single-thread",
-    "dep:crc",
     "dep:embedded-graphics",
     "dep:embedded-svc",
     "dep:heapless",
-    "dep:postcard",
     "dep:ssd1306",
     "dep:pm_firmware_lib",
     "dep:ws2812-esp32-rmt-driver",
@@ -223,6 +221,9 @@ cmp_leptos = [
     "dep:web-sys",
 ]
 
+## Комонент для коммуникации через порт UART
+cmp_linux_serial_master = ["executor", "serialport"]
+
 ## Компонент Modbus клиент
 cmp_modbus_client = ["executor", "dep:tokio-modbus"]
 
@@ -236,13 +237,7 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor", "dep:instant"]
 
 ## Работа с периферией Raspberry Pi
-cmp_raspberrypi = [
-    "executor",
-    "dep:crc",
-    "dep:rppal",
-    "dep:pm_firmware_lib",
-    "dep:postcard",
-]
+cmp_raspberrypi = ["executor", "dep:rppal", "dep:pm_firmware_lib"]
 
 ## Компонент клиента Redis
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
@@ -364,6 +359,10 @@ path = "./examples/cmp_filesystem/cmp_filesystem.rs"
 [[example]]
 name = "cmp_http_client"
 path = "examples/cmp_http_client/cmp_http_client.rs"
+
+[[example]]
+name = "cmp_linux_serial_master"
+path = "examples/cmp_raspberrypi/cmp_linux_serial_master.rs"
 
 [[example]]
 name = "cmp_raspberry_i2c_master_ads1115"
