--- a/target_config.json
+++ b/target_config.json
@@ -11,6 +11,7 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_serial_master",
         "cmp_modbus_client",
         "cmp_mqtt_client",
         "cmp_os_process",
@@ -50,6 +51,7 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_serial_master",
         "cmp_modbus_client",
         "cmp_mqtt_client",
         "cmp_os_process",
