--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -27,7 +27,7 @@
           // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
           "target": "x86_64-unknown-linux-gnu",
           "features": [
-            // "rustdoc"
+            // "rustdoc",
             // "executor"
             // "single-thread",
             // "env_vars"
@@ -38,7 +38,7 @@
             // "cmp_http_server",
             // "cmp_filesystem",
             // "cmp_influxdb",
-            "cmp_linux_serial_master"
+            "cmp_linux_uart_master"
             // "cmp_modbus_client"
             // "cmp_mqtt_client"
             // "cmp_plc"
