--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.7.0-rc1", features = ["csr"], optional = true }
 leptos_router = { version = "0.7.0-rc1", optional = true }
+linux-embedded-hal = { version = "0.4.0", optional = true, features = [
+    "async-tokio",
+    "gpio_cdev",
+], default-features = false }
 log = { version = "0.4.21", optional = true }
 pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
@@ -126,7 +130,6 @@ openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 [target.'cfg(all(target_arch = "riscv32", target_vendor = "espressif", target_os = "espidf"))'.dependencies]
 esp-idf-svc = { version = "0.49.1", features = ["std"] }
-esp-idf-hal = { version = "*" }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
@@ -222,7 +225,7 @@ cmp_leptos = [
 ]
 
 ## Комонент для коммуникации через порт UART
-cmp_linux_serial_master = ["executor", "serialport"]
+cmp_linux_uart_master = ["executor", "dep:serialport", "dep:linux-embedded-hal"]
 
 ## Компонент Modbus клиент
 cmp_modbus_client = ["executor", "dep:tokio-modbus"]
