--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,4 @@
 [toolchain]
-# channel = "nightly"
-# channel = "nightly-2024-02-01"
-channel = "nightly-2024-10-01"
+channel = "nightly"
+# channel = "nightly-2024-10-01"
 components = ["rust-src"]
