--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,8 @@ instant = { version = "0.1.12", features = ["wasm-bindgen"], optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.7.0-rc1", features = ["csr"], optional = true }
-leptos_router = { version = "0.7.0-rc1", optional = true }
+leptos = { version = "0.7.0", features = ["csr"], optional = true }
+leptos_router = { version = "0.7.0", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
