--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,14 +41,15 @@ instant = { version = "0.1.12", features = ["wasm-bindgen"], optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.7.0", features = ["csr"], optional = true }
-leptos_router = { version = "0.7.0", optional = true }
+leptos = { version = "0.7.3", features = ["csr"], optional = true }
+leptos_router = { version = "0.7.3", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
 ], default-features = false }
 log = { version = "0.4.21", optional = true }
 pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
+reactive_stores = { version = "0.1.1", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
@@ -130,6 +131,8 @@ openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 [target.'cfg(all(target_arch = "riscv32", target_vendor = "espressif", target_os = "espidf"))'.dependencies]
 esp-idf-svc = { version = "0.49.1", features = ["std"] }
+# Обновить когда ws2812-esp32-rmt-driver заработает с новой версией
+# esp-idf-svc = { version = "0.50.1", features = ["std"] }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
@@ -214,15 +217,15 @@ cmp_influxdb = ["executor", "dep:openssl", "dep:reqwest"]
 ## Комонент сохранения данных в файловой системе
 cmp_filesystem = ["executor", "tokio?/fs"]
 
-## Компонент для создания интерфейсов на базе Leptos
 cmp_leptos = [
     "executor",
     "dep:leptos",
     "dep:palette",
+    "dep:reactive_stores",
     "dep:url",
     "dep:wasm-bindgen",
     "dep:web-sys",
-]
+] ## Компонент для создания интерфейсов на базе Leptos
 
 ## Комонент для коммуникации через порт UART
 cmp_linux_uart_master = ["executor", "dep:serialport", "dep:linux-embedded-hal"]
