--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
-[build]
-target = "riscv32imc-esp-espidf"
+# [build]
+# target = "riscv32imc-esp-espidf"
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
