--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,6 @@ linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "spi",
 ], default-features = false }
 log = { version = "0.4.21", optional = true }
-pm_firmware_lib = { version = "*", path = "../plc-modules/firmware/pm_firmware_lib", optional = true }
 reactive_stores = { version = "0.1.1", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
@@ -195,7 +194,6 @@ cmp_esp = [
     "dep:embedded-svc",
     "dep:heapless",
     "dep:ssd1306",
-    "dep:pm_firmware_lib",
     "dep:ws2812-esp32-rmt-driver",
     "dep:url",
     "tokio?/time",
@@ -252,7 +250,7 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor", "dep:instant"]
 
 ## Работа с периферией Raspberry Pi
-cmp_raspberrypi = ["executor", "dep:rppal", "dep:pm_firmware_lib"]
+cmp_raspberrypi = ["executor", "dep:rppal"]
 
 ## Компонент клиента Redis
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
