--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ tower-http = { version = "0.5.1", features = [
     "trace",
 ], optional = true }
 url = { version = "2.5.0", optional = true }
-wasm-bindgen = { version = "*", optional = true }
+wasm-bindgen = { version = "0.2.100", optional = true }
 web-sys = { version = "0.3.68", features = [
     "History",
     "Location",
@@ -103,11 +103,11 @@ web-sys = { version = "0.3.68", features = [
     "NodeList",
     "Window",
 ], optional = true }
-ws2812-esp32-rmt-driver = { version = "*", features = [
+ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
     "smart-leds-trait",
 ], optional = true }
 
-rsiot-macros = { path = "./rsiot-macros" }
+rsiot-macros = { version = "0.0.73", path = "./rsiot-macros" }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
