--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ instant = { version = "0.1.12", features = ["wasm-bindgen"], optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.7.3", features = ["csr"], optional = true }
-leptos_router = { version = "0.7.3", optional = true }
+leptos = { version = "0.8.0-alpha", features = ["csr"], optional = true }
+leptos_router = { version = "0.8.0-alpha", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
@@ -55,7 +55,7 @@ linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "spi",
 ], default-features = false }
 log = { version = "0.4.21", optional = true }
-reactive_stores = { version = "0.1.1", optional = true }
+reactive_stores = { version = "0.2.0-alpha", optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
 rumqttc = { version = "0.24.0", optional = true }
