--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -47,20 +47,20 @@
             //   "cmp_system_info",
             //   "cmp_telegram",
             //   "cmp_timescaledb",
-            "cmp_websocket_client",
-            "cmp_websocket_server"
+            "cmp_websocket_client"
+            // "cmp_websocket_server"
           ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
-          //   "single-thread", // Активировать обязательно !
+          // "single-thread", // Активировать обязательно !
           //   "rustdoc",
           //   "executor",
           //   "logging",
           //   "cmp_http_client_wasm",
           //   "cmp_leptos",
           //   "cmp_plc",
-          //   "cmp_websocket_client_wasm",
+          // "cmp_websocket_client_wasm"
           //   "cmp_webstorage"
           // ]
         }
