--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -30,9 +30,9 @@
             //   "env_vars",
             //   "logging",
             //   "cmp_auth",
-            //   "cmp_filesystem",
-            // "cmp_http_client",
-            //   "cmp_http_server",
+            // "cmp_filesystem",
+            "cmp_http_client",
+            "cmp_http_server",
             // "cmp_filesystem",
             //   "cmp_influxdb",
             //   "cmp_linux_spi_master",
@@ -47,10 +47,10 @@
             //   "cmp_system_info",
             //   "cmp_telegram",
             //   "cmp_timescaledb",
-            "cmp_websocket_client",
-            "cmp_websocket_server",
-            "serde_json"
-            // "serde_toml"
+            // "cmp_websocket_client",
+            // "cmp_websocket_server",
+            "serde_json",
+            "serde_toml"
           ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
@@ -64,6 +64,8 @@
           // "cmp_plc",
           // "cmp_websocket_client_wasm"
           // "cmp_webstorage"
+          // "serde_json",
+          // "serde_toml"
           // ]
         }
       }
